Adding more functionality

--- a/DSIOfficial/app/src/main/res/values/strings.xml
+++ b/DSIOfficial/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">DSI Official</string>
     <string name="URL">http://192.168.0.103:4000/collegeNotification</string>
     <string name="refresh">Refresh</string>
+    <string name="title_activity_nav_test">NavTest</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
