--- a/DSIOfficial/app/src/main/res/values/strings.xml
+++ b/DSIOfficial/app/src/main/res/values/strings.xml
@@ -6,6 +6,21 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string-array name="subjects_array">
+        <item>Math</item>
+        <item>Physics</item>
+        <item>ChemicalEngg</item>
+        <item>Aeronautical</item>
+        <item>Automobile</item>
+        <item>Biology</item>
+        <item>Biotechnology</item>
+        <item>ComputerSc</item>
+        <item>Telecommunication</item>
+        <item>Electronics</item>
+        <item>Electrical</item>
+        <item>Chemistry</item>
+
+    </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
