--- a/DSIOfficial/app/src/main/res/values/strings.xml
+++ b/DSIOfficial/app/src/main/res/values/strings.xml
@@ -23,6 +23,14 @@
 
     </string-array>
 
+    <string-array name="years_array">
+
+        <item>1st</item>
+        <item>2nd CSE</item>
+        <item>3rd CSE</item>
+
+    </string-array>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
